// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-zapier compiles JSX 1`] = `
"\\"use strict\\";

React.createElement(Foo, null);"
`;

exports[`babel-preset-zapier compiles to commonjs modules 1`] = `
"\\"use strict\\";

var _foo = _interopRequireDefault(require(\\"foo\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }"
`;

exports[`babel-preset-zapier doesn't compile ES modules to commonjs by default 1`] = `
"
import Foo from 'foo';"
`;

exports[`babel-preset-zapier doesnt strip proptypes when not in prod env 1`] = `
"\\"use strict\\";

const Baz = props => React.createElement(\\"div\\", props);

Baz.propTypes = {
  className: PropTypes.string
};"
`;

exports[`babel-preset-zapier strips flow annotations 1`] = `
"\\"use strict\\";

function greet(name) {}"
`;

exports[`babel-preset-zapier when on production env strips proptypes when in prod env 1`] = `
"\\"use strict\\";

const Baz = props => React.createElement(\\"div\\", props);"
`;
